        SaveMenu.cpp
        EndExperimentMenu.cpp
        ConformationMenu.cpp
  data/
    data/
        config/
            raceman/
                replay.xml
        img/
            radio-checked.png
            radio-checked-focused.png
            radio-unchecked.png
            radio-unchecked-focused.png
            checked-focused.png
            unchecked-focused.png
            head.png
        indicators/
            *
        menu/
            ResearcherMenu.xml
            DataSelectionMenu.xml
            DataCompressionMenu.xml
            DeveloperMenu.xml
            SaveMenu.xml
            ConformationMenu.xml
            EndExperimentMenu.xml
        tracks/
            curved highway.xml
            curved-road.xml
            simple-highway.xml
            simple-road.xml
            test-tracks.xml

    drivers/
        assistedhuman/
            *
    tracks/
        added curved-highway
        added simple-highway
        added simple-road

Changed:
  src/
    drivers/simplix/src/
        unitdriver.cpp
            Changed the oFuelCons value to 0
    libs/
        robottools/
            humandriver.h
                included Recorder.h
                added m_recorder
                added SetRecorder
            rthumandriver.cpp
                changed new_race()
                changed drive_at()
                changed shutdown()
                changed common_drive(): 
                    added check for input of intervention toggle on/off
                    added conditions around partipant input for steering/throttle/brake
                added   SetRecorder()
                added   m_prevIntervention member
                added   NO_KEYBOARD define: clarify magic number
                changed the MaxFuelPerMeter value to 0
                changed the fuel_cons_factor to value 0
            CMakeLists.txt
                changed frontend added to ADD_SDLIB_INCLUDEDIR