@@ -52,10 +52,7 @@
 
 	</section>
 
-	<section name="dynamic controls">
-
-
-	</section>
+    <!-- SIMULATED DRIVING ASSISTANCE: removed title label-->
 
 	<section name="static controls">
 
