@@ -52,6 +52,12 @@ Added:
             radio-unchecked-focused.png
             checked-focused.png
             unchecked-focused.png
+            bg-button-three.png
+            bg-button-three_focused.png
+            bg-button-three_pushed.png
+            bg-button-two.png
+            bg-button-two_focused.png
+            bg-button-two_pushed.png
             head.png
         indicators/
             *
@@ -306,6 +312,8 @@ Changed:
                         changed rmOnSelectRaceMan()
                         changed RmRaceSelectInit()
                     removed csnetclientsettings.cpp, csnetserversettings.cpp, csnetworkingmenu.cpp, networking.cpp, csnetwork.h
+                    raceloadingscreen.cpp
+                        changed RmLoadingScreenStart()
                 confscreens/
                     soundconfig.cpp
                         added ChangeInterventionVolume()
@@ -493,6 +501,8 @@ Changed:
                 changed background image
             controlconfigmenu.xml
                 added button for force feedback control
+            loadingscreen.xml
+                removed titlelabel
 
   cmake/
     checks.cmake
